...
      shape = RoundedCornerShape(CARD_CORNER_RADIUS),
      elevation = CardDefaults.cardElevation(defaultElevation = CARD_ELEVATION),
      colors =
          CardDefaults.cardColors(
              containerColor = MaterialTheme.colorScheme.primaryContainer,
              contentColor = MaterialTheme.colorScheme.onSecondary),
      modifier = Modifier.fillMaxWidth().heightIn(max = CARD_MAX_HEIGHT).testTag("profileCard")) {
        Row(
            horizontalArrangement = Arrangement.spacedBy(IMAGE_SPACING),
            verticalAlignment = Alignment.Top,
            modifier =
                Modifier.fillMaxWidth()
                    .padding(
...
